# bank-statements

./: .gitignore  ARCHITECTURE.md  CLIENT_REFERENCE_BANK_STATEMENT.md  CRYPTO_SYNC.md  DEPLOY.md  STATUS.md  api_reference_bank_statement.md
backend/: Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/app/: auth.py  db.py  entity_inference.py  extraction_log.py  llm.py  main.py  schemas.py  store.py
benchmarks/: SUMMARY.md  run.py  run_one_pdf.py  scorer.py  sum_check.py
benchmarks/ground_truth/: transactions.csv
core/: COMPAT_NOTES.md  README.md
core/analysis/: entity_classification.py  pattern_framework.py  signal_assembler.py  transaction_pool.py  velocity_analyzer.py
core/auth/: jwt.py
core/graph/: bfs_trace.py  graph_store.py
deployment/lea-offline/: README.md
deployment/saas/: README.md
docs/: architecture.md  data-model.md  for-crypto-team.md  from-crypto-team.md  graph_canvas_ux.md  implementation_plan.md  product_document.md  ux-decisions.md  ux-phases.md  ux-wireframes.md
docs/sample_ux/: readme.md  ux_wireframes.md
docs/sample_ux/all_transactions_timeline/: code.html
docs/sample_ux/case_dashboard/: code.html
docs/sample_ux/case_overview/: code.html
docs/sample_ux/forensic_ledger/: DESIGN.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  railway.json
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  routes.tsx
plugins/bank/: README.md  vocabularies.py
tools/: export-for-frontend.py  smoke-test-e2e.sh  sync-from-crypto.sh
(+44 files in other folders)
